# desktop-whisper

./: .gitignore  README.md
voice-input-tool/: README.md  VoiceInput.spec  pyproject.toml  requirements.txt  run.py
voice-input-tool/scripts/: build_macos.sh  create_icon.py  entitlements.plist
voice-input-tool/src/: __init__.py  app.py  asr.py  hotkey.py  output.py  recorder.py  ui.py
voice-input-tool/tests/: test_asr.py
